<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">Notekeeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="send_as_email">Send as email</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_courses">Courses</string>
    <string name="communicate">Communicate</string>
    <string name="android_launcher">android launcher</string>
    <string name="text_course">TextView</string>
    <string name="text_title">TextView</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="todo">TODO</string>
    <string name="text_note_title">Note Title</string>
    <string name="text_note_text">Note text</string>
    <string name="note_text_hint">Note Text Hint</string>
    <string name="note_title_hint">Note Title Hint</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="notification_header">Notification</string>
    <string name="sync_header">Sync</string>

    <!-- General Preferences -->
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your Name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="messages_header">general_header</string>
    <string name="display_name">display_name</string>

    <!-- Notification Preferences -->
    <string name="pref_title_new_message_notifications">New Message Notification</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="pref_default_email_address">Yourname@yourhost.com</string>
    <string name="pref_title_favorite_social">Favorite Social Network</string>
    <string-array name="pref_entries_favorite_social">
        <item>Google+</item>
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>
    <string-array name="pref_values_favorite_social">
        <item>http://plus.google.com</item>
        <item>http://facebook.com</item>
        <item>http://twitter.com</item>
    </string-array>
    <string name="pref_default_favorite_social">http://plus.google.com</string>
</resources>