<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/nav_notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/nav_courses" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:title="@string/nav_share"
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"/>
            <item
                android:title="@string/nav_send"
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"/>
        </menu>
    </item>
</menu>